// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mars Service cardActivateDigital should return a created power card 1`] = `
Object {
  "attractionChips": undefined,
  "cardEncoding": "%S39ED3O8CQJG?",
  "cardNumber": "1000000625",
  "cardStatusId": 3,
  "country": "USA",
  "gameChips": undefined,
  "isRegistered": false,
  "pointsToNextReward": undefined,
  "rewardChips": undefined,
  "rewardPoints": 0,
  "storeId": 5,
  "tickets": undefined,
  "videoChips": undefined,
}
`;

exports[`Mars Service cardBalancesMultiple should return multiple card balances 1`] = `
Object {
  "balances": Array [
    Object {
      "attractionChips": 0,
      "cardEncoding": "%S3JOPNM3V2MF?",
      "cardNumber": "1000000606",
      "country": "USA",
      "gameChips": 1590,
      "isRegistered": false,
      "pointsToNextReward": 76,
      "rewardChips": 0,
      "rewardPoints": 124,
      "status": 200,
      "storeId": 1,
      "tickets": 0,
      "videoChips": 0,
    },
  ],
}
`;

exports[`Mars Service cardDeActivate should return successful empty response 1`] = `
Object {
  "success": false,
}
`;

exports[`Mars Service cardReActivate should return successful empty response 1`] = `
Object {
  "success": false,
}
`;

exports[`Mars Service cardRecharge should return an updated power card 1`] = `
Object {
  "attractionChips": 0,
  "eligibleRewardCount": 1,
  "gameChips": 1590,
  "pointsToNextReward": 76,
  "rewardChips": 0,
  "rewardPoints": 124,
  "tickets": 0,
  "videoChips": 0,
}
`;

exports[`Mars Service cardRewardsHistory should return a list of reward history items 1`] = `
Object {
  "eligibleRewardCount": 1,
  "lastUpdated": 2019-04-30T05:00:00.000Z,
  "pointsToNextReward": 76,
  "rewardPoints": 24,
  "transactions": Array [
    Object {
      "chipBalance": 100,
      "expirationDate": null,
      "numberOfChips": null,
      "numberOfPoints": 100,
      "transactionDate": 2019-04-29T14:49:50.010Z,
      "transactionType": 1,
    },
    Object {
      "chipBalance": 112,
      "expirationDate": null,
      "numberOfChips": null,
      "numberOfPoints": 12,
      "transactionDate": 2019-04-30T08:18:35.293Z,
      "transactionType": 1,
    },
    Object {
      "chipBalance": 124,
      "expirationDate": null,
      "numberOfChips": null,
      "numberOfPoints": 12,
      "transactionDate": 2019-04-30T08:18:43.233Z,
      "transactionType": 1,
    },
  ],
}
`;

exports[`Mars Service cardValidate should return success 1`] = `
Object {
  "cardEncoding": "%S35SP8ID2CJI?",
  "cardNumber": "12345678",
  "cardStatusId": 3,
  "country": "USA",
  "isRegistered": true,
  "storeId": 0,
}
`;

exports[`Mars Service offerList should return a list of offers 1`] = `
Object {
  "offers": Array [
    Object {
      "autoApply": true,
      "description": "$20 Free Game Play* with $20 Power Card® Recharge through 8/27/2019.",
      "disclaimer": "*Promotional. EXPIRES: 8/27/2019. Limit one coupon per customer per Power Card®. Limited to in-app redemption only, not valid for in store redemption. Coupon value may not be divided into multiple Power Cards. Coupon valid for one use only. Minor policies vary by location – please check daveandbusters.com for details. Not valid with any other offers, including Eat & Play Combos, Half Price Games Wednesdays or any Half Price Game promotion. Not valid with Special Events Packages or on Virtual Reality games. NOT FOR RESALE.",
      "imageUrl": "https://dave-busters-public.s3.amazonaws.com/offer-images/DB_MobileAppImage_DoubleYourFun_F-01.jpg",
      "item": Object {
        "categoryId": 0,
        "chips": 200,
        "color": "#000000",
        "isBestValue": false,
        "itemId": 39,
        "originalPrice": 20,
        "price": 20,
        "sequence": 0,
        "upSellId": 0,
      },
      "offerAmount": 20,
      "offerId": 2,
      "offerTypes": Array [
        "NEW_USER",
        "EXISTING_USER",
        "STORE_ID",
        "PHYSICAL_CARD",
        "DIGITAL_CARD",
      ],
      "termsAndConditions": "These are the Terms & Conditions",
      "title": "Buy $20, Get $20 Free!",
      "validFrom": 2019-08-20T00:00:00.000Z,
      "validTo": 2020-08-07T00:00:00.000Z,
    },
    Object {
      "autoApply": true,
      "description": "$10 OFF Your $75 Purchase",
      "disclaimer": "this is a test",
      "imageUrl": "https://dave-busters-public.s3.amazonaws.com/offer-images/DB_Mobile+Images_Double+Game+Play_V1+-+1372.jpg",
      "item": Object {
        "categoryId": 0,
        "chips": 550,
        "color": "#41B6E6",
        "isBestValue": false,
        "itemId": 73,
        "originalPrice": 75,
        "price": 65,
        "sequence": 0,
        "upSellId": 0,
      },
      "offerAmount": 10,
      "offerId": 3,
      "offerTypes": Array [
        "NEW_USER",
        "EXISTING_USER",
        "STORE_ID",
        "PHYSICAL_CARD",
        "DIGITAL_CARD",
      ],
      "termsAndConditions": "this is a test",
      "title": "$10 OFF $75",
      "validFrom": 2019-06-20T00:00:00.000Z,
      "validTo": 2019-11-21T00:00:00.000Z,
    },
    Object {
      "autoApply": true,
      "description": "$10 Game Play added for FREE to your $50 Purchase",
      "disclaimer": "<FPO> *Craveable Combo does not include tax and gratuity. Offer valid for a limited time only. Unlimited Video Game Play is valid only on day of purchase for non-redemption games and excludes all ticket redemption and Virtual Reality games. Not valid with other offers. Pricing varies by location. Menu selection may vary by location. Participation may vary. Restrictions apply. Void where prohibited. See store for details.",
      "imageUrl": "https://dave-busters-public.s3.amazonaws.com/offer-images/DB_Mobile+Images_Double+Game+Play_V1+-+1372.jpg",
      "item": Object {
        "categoryId": 0,
        "chips": 300,
        "color": "#41B6E6",
        "isBestValue": false,
        "itemId": 74,
        "originalPrice": 50,
        "price": 40,
        "sequence": 0,
        "upSellId": 0,
      },
      "offerAmount": 10,
      "offerId": 4,
      "offerTypes": Array [
        "NEW_USER",
        "EXISTING_USER",
        "STORE_ID",
        "PHYSICAL_CARD",
        "DIGITAL_CARD",
      ],
      "termsAndConditions": "These are the Terms & Conditions",
      "title": "Free $10 Game Play w/ $50 Purchase",
      "validFrom": 2019-01-01T00:00:00.000Z,
      "validTo": 2020-12-01T00:00:00.000Z,
    },
    Object {
      "autoApply": true,
      "description": "$10 OFF Your $50 Purchase",
      "disclaimer": "this is a test",
      "imageUrl": "https://dave-busters-public.s3.amazonaws.com/offer-images/DB_Mobile+Images_Double+Game+Play_V1+-+1372.jpg",
      "item": Object {
        "categoryId": 0,
        "chips": 300,
        "color": "#41B6E6",
        "isBestValue": false,
        "itemId": 74,
        "originalPrice": 50,
        "price": 40,
        "sequence": 0,
        "upSellId": 0,
      },
      "offerAmount": 10,
      "offerId": 6,
      "offerTypes": Array [
        "NEW_USER",
        "EXISTING_USER",
        "STORE_ID",
        "PHYSICAL_CARD",
        "DIGITAL_CARD",
      ],
      "termsAndConditions": "this is a test",
      "title": "$10 OFF $50",
      "validFrom": 2019-06-20T00:00:00.000Z,
      "validTo": 2020-07-20T00:00:00.000Z,
    },
    Object {
      "autoApply": true,
      "description": "20% OFF Your $75 Purchase",
      "disclaimer": "this is a test",
      "imageUrl": "https://dave-busters-public.s3.amazonaws.com/offer-images/DB_Mobile+Images_Double+Game+Play_V1+-+1372.jpg",
      "item": Object {
        "categoryId": 0,
        "chips": 550,
        "color": "#41B6E6",
        "isBestValue": false,
        "itemId": 75,
        "originalPrice": 75,
        "price": 60,
        "sequence": 0,
        "upSellId": 0,
      },
      "offerAmount": 15,
      "offerId": 7,
      "offerTypes": Array [
        "NEW_USER",
        "EXISTING_USER",
        "STORE_ID",
        "PHYSICAL_CARD",
        "DIGITAL_CARD",
      ],
      "termsAndConditions": "this is a test",
      "title": "20% OFF $75",
      "validFrom": 2019-06-20T00:00:00.000Z,
      "validTo": 2020-07-20T00:00:00.000Z,
    },
    Object {
      "autoApply": true,
      "description": "Get $10 Free Game Play - No Purchase Necessary!",
      "disclaimer": "",
      "imageUrl": "https://dave-busters-public.s3.amazonaws.com/offer-images/DB_Mobile+Images_Double+Game+Play_V1+-+1372.jpg",
      "item": Object {
        "categoryId": 0,
        "chips": 48,
        "color": "#000000",
        "isBestValue": false,
        "itemId": 77,
        "originalPrice": 10,
        "price": 0,
        "sequence": 0,
        "upSellId": 0,
      },
      "offerAmount": 10,
      "offerId": 8,
      "offerTypes": Array [
        "NEW_USER",
        "EXISTING_USER",
        "STORE_ID",
        "PHYSICAL_CARD",
        "DIGITAL_CARD",
      ],
      "termsAndConditions": "",
      "title": "$10 Free Game Play",
      "validFrom": 2019-10-15T00:00:00.000Z,
      "validTo": 2020-03-12T00:00:00.000Z,
    },
    Object {
      "autoApply": true,
      "description": "$25 Free Game Play* with $25 Power Card® Recharge through 8/27/2020.",
      "disclaimer": "*Promotional. EXPIRES: 8/27/2020. Limit one coupon per customer per Power Card®. Limited to in-app redemption only, not valid for in store redemption. Coupon value may not be divided into multiple Power Cards. Coupon valid for one use only. Minor policies vary by location – please check daveandbusters.com for details. Not valid with any other offers, including Eat & Play Combos, Half Price Games Wednesdays or any Half Price Game promotion. Not valid with Special Events Packages or on Virtual Reality games. NOT FOR RESALE.",
      "imageUrl": "https://dave-busters-public.s3.amazonaws.com/offer-images/DB_MobileAppImage_DoubleYourFun_F-01.jpg",
      "item": Object {
        "categoryId": 0,
        "chips": 270,
        "color": "#000000",
        "isBestValue": false,
        "itemId": 80,
        "originalPrice": 25,
        "price": 25,
        "sequence": 0,
        "upSellId": 0,
      },
      "offerAmount": 25,
      "offerId": 10,
      "offerTypes": Array [
        "NEW_USER",
        "EXISTING_USER",
        "STORE_ID",
        "PHYSICAL_CARD",
        "DIGITAL_CARD",
      ],
      "termsAndConditions": "These are the Terms & Conditions",
      "title": "Buy $25, Get $25 Free!",
      "validFrom": 2019-08-20T00:00:00.000Z,
      "validTo": 2020-08-27T00:00:00.000Z,
    },
  ],
}
`;

exports[`Mars Service offerRedeem should return success 1`] = `
Object {
  "success": false,
}
`;

exports[`Mars Service rateCards should return a list of rate card items 1`] = `
Object {
  "activationFee": 3,
  "activationItem": Object {
    "categoryId": 0,
    "chips": 0,
    "color": "#000000",
    "isBestValue": false,
    "itemId": 8,
    "originalPrice": 3,
    "price": 3,
    "sequence": 0,
    "upSellId": 0,
  },
  "attractionItemList": Array [
    Object {
      "categoryId": 0,
      "chips": 1,
      "color": "#DC4405",
      "isBestValue": false,
      "itemId": 9,
      "originalPrice": 5,
      "price": 5,
      "sequence": 1,
      "upSellId": 0,
    },
    Object {
      "categoryId": 0,
      "chips": 2,
      "color": "#DC4405",
      "isBestValue": false,
      "itemId": 10,
      "originalPrice": 10,
      "price": 10,
      "sequence": 2,
      "upSellId": 0,
    },
    Object {
      "categoryId": 0,
      "chips": 3,
      "color": "#DC4405",
      "isBestValue": false,
      "itemId": 11,
      "originalPrice": 15,
      "price": 15,
      "sequence": 3,
      "upSellId": 0,
    },
    Object {
      "categoryId": 0,
      "chips": 4,
      "color": "#DC4405",
      "isBestValue": false,
      "itemId": 12,
      "originalPrice": 20,
      "price": 20,
      "sequence": 4,
      "upSellId": 0,
    },
    Object {
      "categoryId": 0,
      "chips": 5,
      "color": "#DC4405",
      "isBestValue": false,
      "itemId": 13,
      "originalPrice": 25,
      "price": 25,
      "sequence": 5,
      "upSellId": 0,
    },
    Object {
      "categoryId": 0,
      "chips": 6,
      "color": "#DC4405",
      "isBestValue": false,
      "itemId": 14,
      "originalPrice": 30,
      "price": 30,
      "sequence": 6,
      "upSellId": 0,
    },
  ],
  "attractionPrice": 5,
  "categoryList": Array [
    Object {
      "categoryId": 1,
      "color": "#DC4405",
      "label": "Just Have Fun!",
      "sequence": 1,
    },
    Object {
      "categoryId": 2,
      "color": "#DC4405",
      "label": "Better Value!",
      "sequence": 2,
    },
    Object {
      "categoryId": 3,
      "color": "#DC4405",
      "label": "Mega Value!",
      "sequence": 3,
    },
  ],
  "menuItemList": Array [
    Object {
      "categoryId": 1,
      "chips": 60,
      "color": "#0057B8",
      "isBestValue": false,
      "itemId": 1,
      "originalPrice": 12,
      "price": 12,
      "sequence": 1,
      "upSellId": 2,
    },
    Object {
      "categoryId": 1,
      "chips": 125,
      "color": "#0057B8",
      "isBestValue": true,
      "itemId": 2,
      "originalPrice": 23,
      "price": 23,
      "sequence": 2,
      "upSellId": 4,
    },
    Object {
      "categoryId": 2,
      "chips": 170,
      "color": "#0057B8",
      "isBestValue": false,
      "itemId": 4,
      "originalPrice": 29,
      "price": 29,
      "sequence": 1,
      "upSellId": 3,
    },
    Object {
      "categoryId": 2,
      "chips": 250,
      "color": "#0057B8",
      "isBestValue": false,
      "itemId": 3,
      "originalPrice": 40,
      "price": 40,
      "sequence": 2,
      "upSellId": 5,
    },
    Object {
      "categoryId": 2,
      "chips": 375,
      "color": "#0057B8",
      "isBestValue": true,
      "itemId": 5,
      "originalPrice": 56,
      "price": 56,
      "sequence": 3,
      "upSellId": 6,
    },
    Object {
      "categoryId": 3,
      "chips": 550,
      "color": "#0057B8",
      "isBestValue": false,
      "itemId": 6,
      "originalPrice": 75,
      "price": 75,
      "sequence": 1,
      "upSellId": 7,
    },
    Object {
      "categoryId": 3,
      "chips": 750,
      "color": "#0057B8",
      "isBestValue": true,
      "itemId": 7,
      "originalPrice": 100,
      "price": 100,
      "sequence": 2,
      "upSellId": 0,
    },
  ],
  "upSellItemList": Array [
    Object {
      "categoryId": 0,
      "chips": 125,
      "color": "#0057B8",
      "isBestValue": true,
      "itemId": 2,
      "originalPrice": 23,
      "price": 23,
      "sequence": 0,
      "upSellId": 4,
    },
    Object {
      "categoryId": 0,
      "chips": 170,
      "color": "#0057B8",
      "isBestValue": false,
      "itemId": 4,
      "originalPrice": 29,
      "price": 29,
      "sequence": 0,
      "upSellId": 3,
    },
    Object {
      "categoryId": 0,
      "chips": 250,
      "color": "#0057B8",
      "isBestValue": false,
      "itemId": 3,
      "originalPrice": 40,
      "price": 40,
      "sequence": 0,
      "upSellId": 5,
    },
    Object {
      "categoryId": 0,
      "chips": 375,
      "color": "#0057B8",
      "isBestValue": true,
      "itemId": 5,
      "originalPrice": 56,
      "price": 56,
      "sequence": 0,
      "upSellId": 6,
    },
    Object {
      "categoryId": 0,
      "chips": 550,
      "color": "#0057B8",
      "isBestValue": false,
      "itemId": 6,
      "originalPrice": 75,
      "price": 75,
      "sequence": 0,
      "upSellId": 7,
    },
    Object {
      "categoryId": 0,
      "chips": 750,
      "color": "#0057B8",
      "isBestValue": true,
      "itemId": 7,
      "originalPrice": 100,
      "price": 100,
      "sequence": 0,
      "upSellId": 0,
    },
  ],
  "version": undefined,
}
`;

exports[`Mars Service rewardsAddMember should return success 1`] = `
Object {
  "success": false,
}
`;

exports[`Mars Service rewardsGetCardNumber should return a card number 1`] = `
Object {
  "cardNumber": "undefined",
}
`;

exports[`Mars Service rewardsSetCardNumber should return success 1`] = `
Object {
  "success": false,
}
`;

exports[`Mars Service rewardsUpdateEmailAddress should return success 1`] = `
Object {
  "success": false,
}
`;

exports[`Mars Service rewardsUpdateMember should return success 1`] = `
Object {
  "success": false,
}
`;

exports[`Mars Service rewardsUpdateOptIn should return success 1`] = `
Object {
  "success": false,
}
`;

exports[`Mars Service storeLocations should return a list of store locations 1`] = `
Object {
  "locations": Array [
    Object {
      "address": "800 E Dimond Blvd Ste 240",
      "city": "Anchorage",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 61.14291,
      "longitude": -149.868347,
      "phone": "(907) 313-1430",
      "specialHour": null,
      "state": "Alaska",
      "storeName": "AK, Anchorage",
      "storeNumber": 110,
      "zip": "99515",
    },
    Object {
      "address": "2700 Riverchase Galleria, Ste 110",
      "city": "Birmingham",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 33.3790855,
      "longitude": -86.80809,
      "phone": "(205) 986-6200",
      "specialHour": null,
      "state": "Alabama",
      "storeName": "AL, Birmingham",
      "storeNumber": 128,
      "zip": "35244",
    },
    Object {
      "address": "950 Makers Way NW",
      "city": "Huntsville",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 34.73037,
      "longitude": -86.5861053,
      "phone": "(256) 947-5650",
      "specialHour": null,
      "state": "Alabama",
      "storeName": "AL, Huntsville",
      "storeNumber": 144,
      "zip": "35806",
    },
    Object {
      "address": "10900 Bass Pro Pkwy",
      "city": "Little Rock",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 34.65753,
      "longitude": -92.41017,
      "phone": "(501) 777-3800",
      "specialHour": null,
      "state": "Arkansas",
      "storeName": "AR, Little Rock",
      "storeNumber": 97,
      "zip": "72210",
    },
    Object {
      "address": "2203 S Promenade Blvd",
      "city": "Rogers",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 36.30578,
      "longitude": -94.17574,
      "phone": "(479) 877-7600",
      "specialHour": null,
      "state": "Arkansas",
      "storeName": "AR, Rogers",
      "storeNumber": 117,
      "zip": "72758",
    },
    Object {
      "address": "9460 W Hanna Ln",
      "city": "Glendale",
      "hours": Array [
        "Mon - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
        "Sun 10:30am - Midnight",
      ],
      "latitude": 33.5351639,
      "longitude": -112.262672,
      "phone": "(623) 759-7800",
      "specialHour": null,
      "state": "Arizona",
      "storeName": "AZ, Glendale",
      "storeNumber": 90,
      "zip": "85305",
    },
    Object {
      "address": "21001 N Tatum Blvd, Ste 44-1400",
      "city": "Phoenix",
      "hours": Array [
        "Mon - Thu 11:30am - Midnight",
        "Fri 11:30am - 1:00am",
        "Sat 10:00am - 1:00am",
        "Sun 11:00am - Midnight",
      ],
      "latitude": 33.6754,
      "longitude": -111.973488,
      "phone": "(480) 538-8956",
      "specialHour": null,
      "state": "Arizona",
      "storeName": "AZ, Phoenix (Scottsdale)",
      "storeNumber": 43,
      "zip": "85050",
    },
    Object {
      "address": "2000 E Rio Salado Pkwy",
      "city": "Tempe",
      "hours": Array [
        "Mon - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
        "Sun 10:45am - Midnight",
      ],
      "latitude": 33.4330826,
      "longitude": -111.904243,
      "phone": "(480) 281-8456",
      "specialHour": null,
      "state": "Arizona",
      "storeName": "AZ, Tempe",
      "storeNumber": 52,
      "zip": "85281",
    },
    Object {
      "address": "1390 E Tucson Marketplace Blvd",
      "city": "Tucson",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 32.187088,
      "longitude": -110.953896,
      "phone": "(520) 330-3400",
      "specialHour": null,
      "state": "Arizona",
      "storeName": "AZ, Tucson",
      "storeNumber": 105,
      "zip": "85713",
    },
    Object {
      "address": "400 S Baldwin Ave #930U",
      "city": "Arcadia",
      "hours": Array [
        "Sun - Wed 11:00am - Midnight",
        "Thu - Sat 11:00am - 1:00am",
      ],
      "latitude": 34.13575,
      "longitude": -118.049454,
      "phone": "(626) 802-6115",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Arcadia (Santa Anita)",
      "storeNumber": 34,
      "zip": "91007",
    },
    Object {
      "address": "2501 El Camino Real, Ste 140",
      "city": "Carlsbad",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 33.17857,
      "longitude": -117.329033,
      "phone": "(760) 576-3800",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Carlsbad",
      "storeNumber": 103,
      "zip": "92008",
    },
    Object {
      "address": "2075 Diamond Blvd., Ste. H180",
      "city": "Concord",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 37.97204,
      "longitude": -122.059822,
      "phone": "(925) 655-6000",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Concord",
      "storeNumber": 157,
      "zip": "94520",
    },
    Object {
      "address": "130 Serramonte Center",
      "city": "Daly City",
      "hours": Array [
        "Mon - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
        "Sun 9:30am - Midnight",
      ],
      "latitude": 37.6711273,
      "longitude": -122.4712,
      "phone": "(415) 840-9300",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Daly City",
      "storeNumber": 102,
      "zip": "94015",
    },
    Object {
      "address": "212 E River Park Circle",
      "city": "Fresno",
      "hours": Array [
        "Mon - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
        "Sun 10:00am - Midnight",
      ],
      "latitude": 36.8550644,
      "longitude": -119.785667,
      "phone": "(559) 650-5100",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Fresno",
      "storeNumber": 88,
      "zip": "93720",
    },
    Object {
      "address": "661 Spectrum Center Dr",
      "city": "Irvine",
      "hours": Array [
        "Sun - Wed 11:00am - Midnight",
        "Thu - Sat 11:00am - 1:00am",
      ],
      "latitude": 33.6511154,
      "longitude": -117.743607,
      "phone": "(949) 727-0555",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Irvine",
      "storeNumber": 14,
      "zip": "92618",
    },
    Object {
      "address": "6801 Hollywood Blvd #343",
      "city": "Los Angeles",
      "hours": Array [
        "Mon - Tue 11:00am - Midnight",
        "Wed - Thu 11:00am - 1:00am",
        "Fri - Sat 11:00am - 2:00am",
        "Sun 11:00am - 1:00am",
      ],
      "latitude": 34.10255,
      "longitude": -118.3401,
      "phone": "(323) 603-2400",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Los Angeles (Hollywood)",
      "storeNumber": 78,
      "zip": "90028",
    },
    Object {
      "address": "6081 Center Dr",
      "city": "Los Angeles",
      "hours": Array [
        "Sun - Wed 11:00am - Midnight",
        "Thu - Sat 11:00am - 1:00am",
      ],
      "latitude": 33.97803,
      "longitude": -118.391548,
      "phone": "(310) 846-9950",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Los Angeles (Westchester)",
      "storeNumber": 75,
      "zip": "90045",
    },
    Object {
      "address": "940 Great Mall Dr",
      "city": "Milpitas",
      "hours": Array [
        "Mon - Tue 11:00am - Midnight",
        "Wed - Thu 11:00am - 1:00am",
        "Fri 11:00am - 2:00am",
        "Sat 10:00am - 2:00am",
        "Sun 9:30am - Midnight",
      ],
      "latitude": 37.4170036,
      "longitude": -121.896957,
      "phone": "(408) 957-9215",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Milpitas (San Jose)",
      "storeNumber": 24,
      "zip": "95035",
    },
    Object {
      "address": "9301 Tampa Ave Ste 212",
      "city": "Northridge",
      "hours": Array [
        "Sun - Thu 11:00am - 1:00am",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 34.24075,
      "longitude": -118.555771,
      "phone": "(818) 739-3100",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Northridge",
      "storeNumber": 112,
      "zip": "91324",
    },
    Object {
      "address": "4821 Mills Circle",
      "city": "Ontario",
      "hours": Array [
        "Mon - Sun 11:00am - Midnight",
      ],
      "latitude": 34.0729,
      "longitude": -117.548325,
      "phone": "(909) 987-1557",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Ontario (USA)",
      "storeNumber": 10,
      "zip": "91764",
    },
    Object {
      "address": "20 City Blvd W, Bldg G #1",
      "city": "Orange",
      "hours": Array [
        "Mon - Wed 11:00am - Midnight",
        "Thu - Sat 11:00am - 1:00am",
        "Sun 9:30am - Midnight",
      ],
      "latitude": 33.7848854,
      "longitude": -117.893692,
      "phone": "(714) 769-1515",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Orange",
      "storeNumber": 16,
      "zip": "92868",
    },
    Object {
      "address": "1174 Roseville Pkwy",
      "city": "Roseville",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 38.768116,
      "longitude": -121.270241,
      "phone": "(916) 772-3400",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Roseville",
      "storeNumber": 60,
      "zip": "95678",
    },
    Object {
      "address": "2931 Camino del Rio N",
      "city": "San Diego",
      "hours": Array [
        "Sun - Tue 11:00am - Midnight",
        "Wed - Sat 11:00am - 1:00am",
      ],
      "latitude": 32.7727127,
      "longitude": -117.131447,
      "phone": "(619) 280-7115",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, San Diego",
      "storeNumber": 27,
      "zip": "92108",
    },
    Object {
      "address": "145 W Hillcrest Dr Ste 130",
      "city": "Thousand Oaks",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 34.18158,
      "longitude": -118.879471,
      "phone": "(805) 857-7800",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Thousand Oaks",
      "storeNumber": 127,
      "zip": "91360",
    },
    Object {
      "address": "21880 Hawthorne Blvd",
      "city": "Torrance",
      "hours": Array [
        "Sun - Tue 11:00am - Midnight",
        "Wed - Thu 11:00am - 1:00am",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 33.8286247,
      "longitude": -118.349609,
      "phone": "(310) 750-9700",
      "specialHour": null,
      "state": "California",
      "storeName": "CA, Torrance",
      "storeNumber": 122,
      "zip": "90503",
    },
    Object {
      "address": "2021 Winston Park Dr, Unit E",
      "city": "Oakville",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 43.5086632,
      "longitude": -79.66791,
      "phone": "(289) 807-0300",
      "specialHour": null,
      "state": "Ontario",
      "storeName": "Canada, Ontario, Oakville",
      "storeNumber": 98,
      "zip": "L6H 6P5",
    },
    Object {
      "address": "120 Interchange Way",
      "city": "Vaughan",
      "hours": Array [
        "Sun - Thu 11:30am - Midnight",
        "Fri - Sat 11:30am - 2:00am",
      ],
      "latitude": 43.78876,
      "longitude": -79.53525,
      "phone": "(905) 760-7600",
      "specialHour": null,
      "state": "Ontario",
      "storeName": "Canada, Ontario, Vaughan",
      "storeNumber": 33,
      "zip": "L4K5C3",
    },
    Object {
      "address": "2000 S Colorado Blvd",
      "city": "Denver",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 39.6812859,
      "longitude": -104.939346,
      "phone": "(303) 759-1515",
      "specialHour": null,
      "state": "Colorado",
      "storeName": "CO, Denver",
      "storeNumber": 12,
      "zip": "80222",
    },
    Object {
      "address": "10667 Westminster Blvd, Ste 100",
      "city": "Westminster",
      "hours": Array [
        "Sun - Thu 11:30am - Midnight",
        "Fri - Sat 11:30am - 1:00am",
      ],
      "latitude": 39.8903465,
      "longitude": -105.070389,
      "phone": "(303) 438-1500",
      "specialHour": null,
      "state": "Colorado",
      "storeName": "CO, Westminster",
      "storeNumber": 25,
      "zip": "80020",
    },
    Object {
      "address": "100 Buckland Hills Dr",
      "city": "Manchester",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 41.8072433,
      "longitude": -72.5502,
      "phone": "(860) 327-0900",
      "specialHour": null,
      "state": "Connecticut",
      "storeName": "CT, Manchester",
      "storeNumber": 80,
      "zip": "06042",
    },
    Object {
      "address": "1201 Boston Post Rd, Ste 2093",
      "city": "Milford",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 41.235878,
      "longitude": -73.03414,
      "phone": "(203) 701-4830",
      "specialHour": null,
      "state": "Connecticut",
      "storeName": "CT, Milford",
      "storeNumber": 125,
      "zip": "06460",
    },
    Object {
      "address": "1507 Cornerstone Blvd",
      "city": "Daytona Beach",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 29.219841,
      "longitude": -81.09558,
      "phone": "(386) 888-3650",
      "specialHour": null,
      "state": "Florida",
      "storeName": "FL, Daytona Beach",
      "storeNumber": 135,
      "zip": "32114",
    },
    Object {
      "address": "13499 S Cleveland Ave Ste 400",
      "city": "Fort Myers",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 26.5498123,
      "longitude": -81.86916,
      "phone": "(239) 264-3000",
      "specialHour": null,
      "state": "Florida",
      "storeName": "FL, Fort Myers",
      "storeNumber": 136,
      "zip": "33907",
    },
    Object {
      "address": "3000 Oakwood Blvd",
      "city": "Hollywood",
      "hours": Array [
        "Mon - Thu 11:30am - Midnight",
        "Fri 11:30am - 2:00am",
        "Sat 11:00am - 2:00am",
        "Sun 11:00am - Midnight",
      ],
      "latitude": 26.0401421,
      "longitude": -80.16217,
      "phone": "(954) 923-5505",
      "specialHour": null,
      "state": "Florida",
      "storeName": "FL, Hollywood",
      "storeNumber": 8,
      "zip": "33020",
    },
    Object {
      "address": "7025 Salisbury Rd",
      "city": "Jacksonville",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 30.24503,
      "longitude": -81.58748,
      "phone": "(904) 296-1525",
      "specialHour": null,
      "state": "Florida",
      "storeName": "FL, Jacksonville",
      "storeNumber": 22,
      "zip": "32256",
    },
    Object {
      "address": "11481 NW 12th St #E622",
      "city": "Miami",
      "hours": Array [
        "Sun - Thu 11:30am - Midnight",
        "Fri - Sat 11:30am - 2:00am",
      ],
      "latitude": 25.7874966,
      "longitude": -80.3811646,
      "phone": "(305) 468-1555",
      "specialHour": null,
      "state": "Florida",
      "storeName": "FL, Miami",
      "storeNumber": 28,
      "zip": "33172",
    },
    Object {
      "address": "8986 International Dr",
      "city": "Orlando",
      "hours": Array [
        "Sun - Thu 11:00am - 1:00am",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 28.4361229,
      "longitude": -81.473175,
      "phone": "(407) 541-3300",
      "specialHour": null,
      "state": "Florida",
      "storeName": "FL, Orlando",
      "storeNumber": 64,
      "zip": "32819",
    },
    Object {
      "address": "15701 LC Hilton Jr Dr",
      "city": "Panama City Beach",
      "hours": Array [
        "Sun - Fri 11:00am - Midnight",
        "Sat 11:00am - 1:00am",
      ],
      "latitude": 30.2177582,
      "longitude": -85.87344,
      "phone": "(850) 238-3501",
      "specialHour": null,
      "state": "Florida",
      "storeName": "FL, Panama City Beach",
      "storeNumber": 77,
      "zip": "32413",
    },
    Object {
      "address": "10209 Estuary Lakes Dr",
      "city": "Tampa",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 27.9367237,
      "longitude": -82.33431,
      "phone": "(813) 603-9700",
      "specialHour": null,
      "state": "Florida",
      "storeName": "FL, Tampa (Brandon)",
      "storeNumber": 120,
      "zip": "33619",
    },
    Object {
      "address": "6500 North Point Pkwy",
      "city": "Alpharetta",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 34.04389,
      "longitude": -84.29355,
      "phone": "(678) 256-1100",
      "specialHour": null,
      "state": "Georgia",
      "storeName": "GA, Alpharetta",
      "storeNumber": 108,
      "zip": "30022",
    },
    Object {
      "address": "4000 Venture Dr, Ste 15",
      "city": "Duluth",
      "hours": Array [
        "Sun - Thu 11:30am - Midnight",
        "Fri - Sat 11:30am - 1:00am",
      ],
      "latitude": 33.94737,
      "longitude": -84.14538,
      "phone": "(770) 497-1152",
      "specialHour": null,
      "state": "Georgia",
      "storeName": "GA, Duluth (Gwinnett)",
      "storeNumber": 19,
      "zip": "30096",
    },
    Object {
      "address": "5900 Sugarloaf Pkwy, Ste 441",
      "city": "Lawrenceville",
      "hours": Array [
        "Sun - Thu 11:30am - Midnight",
        "Fri - Sat 11:30am - 1:00am",
      ],
      "latitude": 33.98048,
      "longitude": -84.07911,
      "phone": "(678) 847-5400",
      "specialHour": null,
      "state": "Georgia",
      "storeName": "GA, Lawrenceville (Sugarloaf)",
      "storeNumber": 45,
      "zip": "30043",
    },
    Object {
      "address": "2215 D and B Dr SE",
      "city": "Marietta",
      "hours": Array [
        "Sun - Thu 11:30am - Midnight",
        "Fri - Sat 11:30am - 1:00am",
      ],
      "latitude": 33.91968,
      "longitude": -84.4852,
      "phone": "(770) 951-5554",
      "specialHour": null,
      "state": "Georgia",
      "storeName": "GA, Marietta (Atlanta)",
      "storeNumber": 4,
      "zip": "30067",
    },
    Object {
      "address": "239 Hwy. 81 W",
      "city": "McDonough",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 33.42888,
      "longitude": -84.19006,
      "phone": "(770) 282-3900",
      "specialHour": null,
      "state": "Georgia",
      "storeName": "GA, McDonough",
      "storeNumber": 140,
      "zip": "30253",
    },
    Object {
      "address": "1030 Auahi St",
      "city": "Honolulu",
      "hours": Array [
        "Mon - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
        "Sun 8:00am - Midnight",
      ],
      "latitude": 21.29456,
      "longitude": -157.853973,
      "phone": "(808) 589-2215",
      "specialHour": null,
      "state": "Hawaii",
      "storeName": "HI, Honolulu",
      "storeNumber": 30,
      "zip": "96814",
    },
    Object {
      "address": "546 North Milwaukee Ave",
      "city": "Boise",
      "hours": Array [
        "Mon - Thu 11:30am - Midnight",
        "Fri 11:30am - 1:00am",
        "Sat 11:00am - 1:00am",
        "Sun 11:00am - Midnight",
      ],
      "latitude": 43.609787,
      "longitude": -116.283585,
      "phone": "(208) 901-3800",
      "specialHour": null,
      "state": "Idaho",
      "storeName": "ID, Boise",
      "storeNumber": 68,
      "zip": "83704",
    },
    Object {
      "address": "1155 N Swift Rd",
      "city": "Addison",
      "hours": Array [
        "Sun - Thu 11:30am - 11:00pm",
        "Fri - Sat 11:30am - 2:00am",
      ],
      "latitude": 41.9480934,
      "longitude": -88.0387,
      "phone": "(630) 543-5151",
      "specialHour": null,
      "state": "Illinois",
      "storeName": "IL, Addison",
      "storeNumber": 6,
      "zip": "60101",
    },
    Object {
      "address": "1030 N Clark St",
      "city": "Chicago",
      "hours": Array [
        "Mon - Tue 4:00pm - 11:00pm",
        "Wed - Thu 11:30am - 11:00pm",
        "Fri - Sat 11:00am - 2:00am",
        "Sun 11:30am - 11:00pm",
      ],
      "latitude": 41.9014053,
      "longitude": -87.63192,
      "phone": "(312) 943-5151",
      "specialHour": null,
      "state": "Illinois",
      "storeName": "IL, Chicago (Gold Coast)",
      "storeNumber": 7,
      "zip": "60610",
    },
    Object {
      "address": "49 Orland Square Dr",
      "city": "Orland Park",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 41.6173553,
      "longitude": -87.8511353,
      "phone": "(708) 428-2100",
      "specialHour": null,
      "state": "Illinois",
      "storeName": "IL, Orland Park",
      "storeNumber": 67,
      "zip": "60462",
    },
    Object {
      "address": "9870 Berwyn Ave",
      "city": "Rosemont",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 41.9749527,
      "longitude": -87.87262,
      "phone": "(847) 447-8000",
      "specialHour": null,
      "state": "Illinois",
      "storeName": "IL, Rosemont",
      "storeNumber": 126,
      "zip": "60018",
    },
    Object {
      "address": "424 Hawthorn Center",
      "city": "Vernon Hills",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 42.2425652,
      "longitude": -87.94877,
      "phone": "(847) 549-2118",
      "specialHour": null,
      "state": "Illinois",
      "storeName": "IL, Vernon Hills",
      "storeNumber": 76,
      "zip": "60061",
    },
    Object {
      "address": "8350 Castleton Corner Dr",
      "city": "Indianapolis",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 39.90814,
      "longitude": -86.07309,
      "phone": "(317) 572-2706",
      "specialHour": null,
      "state": "Indiana",
      "storeName": "IN, Indianapolis",
      "storeNumber": 57,
      "zip": "46250",
    },
    Object {
      "address": "1843 Village W Pkwy, #201",
      "city": "Kansas City",
      "hours": Array [
        "Mon - Sun 11:00am - Midnight",
      ],
      "latitude": 39.1260529,
      "longitude": -94.82724,
      "phone": "(913) 981-6815",
      "specialHour": null,
      "state": "Kansas",
      "storeName": "KS, Kansas City",
      "storeNumber": 49,
      "zip": "66109",
    },
    Object {
      "address": "6811 W 135th St",
      "city": "Overland Park",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 38.8836441,
      "longitude": -94.6646347,
      "phone": "(913) 249-3900",
      "specialHour": null,
      "state": "Kansas",
      "storeName": "KS, Overland Park",
      "storeNumber": 101,
      "zip": "66223",
    },
    Object {
      "address": "2644 N Greenwich Ct",
      "city": "Wichita",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 37.73088,
      "longitude": -97.20764,
      "phone": "(316) 796-8550",
      "specialHour": null,
      "state": "Kansas",
      "storeName": "KS, Wichita",
      "storeNumber": 145,
      "zip": "67226",
    },
    Object {
      "address": "781 Heights Blvd",
      "city": "Florence",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 38.9877129,
      "longitude": -84.64906,
      "phone": "(859) 692-9800",
      "specialHour": null,
      "state": "Kentucky",
      "storeName": "KY, Florence",
      "storeNumber": 96,
      "zip": "41042",
    },
    Object {
      "address": "5000 Shelbyville Rd, Ste D200",
      "city": "Louisville",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 38.2473259,
      "longitude": -85.62336,
      "phone": "(502) 963-0940",
      "specialHour": null,
      "state": "Kentucky",
      "storeName": "KY, Louisville",
      "storeNumber": 131,
      "zip": "40207",
    },
    Object {
      "address": "1200 Poydras St, Unit 601",
      "city": "New Orleans",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 29.95077,
      "longitude": -90.07589,
      "phone": "(504) 226-3300",
      "specialHour": null,
      "state": "Louisiana",
      "storeName": "LA, New Orleans",
      "storeNumber": 106,
      "zip": "70113",
    },
    Object {
      "address": "250 Granite St #1908",
      "city": "Braintree",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 42.2189865,
      "longitude": -71.02349,
      "phone": "(781) 519-7900",
      "specialHour": null,
      "state": "Massachusetts",
      "storeName": "MA, Braintree",
      "storeNumber": 61,
      "zip": "02184",
    },
    Object {
      "address": "1235 Worcester St Ste 3201",
      "city": "Natick",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 42.301754,
      "longitude": -71.38382,
      "phone": "(508) 810-3650",
      "specialHour": null,
      "state": "Massachusetts",
      "storeName": "MA, Natick",
      "storeNumber": 143,
      "zip": "01760",
    },
    Object {
      "address": "271 Mishawum Rd",
      "city": "Woburn",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 42.5033569,
      "longitude": -71.13654,
      "phone": "(781) 496-4900",
      "specialHour": null,
      "state": "Massachusetts",
      "storeName": "MA, Woburn",
      "storeNumber": 84,
      "zip": "01801",
    },
    Object {
      "address": "8200 Perry Hall Blvd",
      "city": "Baltimore",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 39.37522,
      "longitude": -76.46883,
      "phone": "(410) 657-9900",
      "specialHour": null,
      "state": "Maryland",
      "storeName": "MD, Baltimore (White Marsh)",
      "storeNumber": 116,
      "zip": "21236",
    },
    Object {
      "address": "1851 Ritchie Station Ct",
      "city": "Capitol Heights",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 38.861763,
      "longitude": -76.850975,
      "phone": "(301) 909-9601",
      "specialHour": null,
      "state": "Maryland",
      "storeName": "MD, Capitol Heights",
      "storeNumber": 95,
      "zip": "20743",
    },
    Object {
      "address": "9811 Washingtonian Blvd Ste H1",
      "city": "Gaithersburg",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 39.11856,
      "longitude": -77.20072,
      "phone": "(301) 296-9350",
      "specialHour": null,
      "state": "Maryland",
      "storeName": "MD, Gaithersburg",
      "storeNumber": 141,
      "zip": "20878",
    },
    Object {
      "address": "7000 Arundel Mills Cir #D-1",
      "city": "Hanover",
      "hours": Array [
        "Sun - Thu 11:30am - Midnight",
        "Fri - Sat 11:30am - 2:00am",
      ],
      "latitude": 39.1573639,
      "longitude": -76.72525,
      "phone": "(443) 755-0113",
      "specialHour": null,
      "state": "Maryland",
      "storeName": "MD, Hanover (Arundel)",
      "storeNumber": 35,
      "zip": "21076",
    },
    Object {
      "address": "8661 Colesville Rd",
      "city": "Silver Spring",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 38.9970665,
      "longitude": -77.02696,
      "phone": "(301) 273-2700",
      "specialHour": null,
      "state": "Maryland",
      "storeName": "MD, Silver Spring",
      "storeNumber": 99,
      "zip": "20910",
    },
    Object {
      "address": "3660 28th St SE",
      "city": "Kentwood",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 42.9104462,
      "longitude": -85.5772858,
      "phone": "(616) 224-8800",
      "specialHour": null,
      "state": "Michigan",
      "storeName": "MI, Kentwood",
      "storeNumber": 85,
      "zip": "49512",
    },
    Object {
      "address": "19375 Victor Pkwy",
      "city": "Livonia",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 42.42838,
      "longitude": -83.42133,
      "phone": "(734) 452-4600",
      "specialHour": null,
      "state": "Michigan",
      "storeName": "MI, Livonia",
      "storeNumber": 74,
      "zip": "48152",
    },
    Object {
      "address": "45511 Park Ave, Ste D",
      "city": "Utica",
      "hours": Array [
        "Sun - Tue 11:00am - Midnight",
        "Wed 11:00am - 1:00am",
        "Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 42.63079,
      "longitude": -83.01163,
      "phone": "(586) 930-1515",
      "specialHour": null,
      "state": "Michigan",
      "storeName": "MI, Utica",
      "storeNumber": 13,
      "zip": "48315",
    },
    Object {
      "address": "500 Southdale Center",
      "city": "Edina",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 44.88043,
      "longitude": -93.32499,
      "phone": "(612) 913-5900",
      "specialHour": null,
      "state": "Minnesota",
      "storeName": "MN, Edina",
      "storeNumber": 87,
      "zip": "55435",
    },
    Object {
      "address": "11780 Fountains Way",
      "city": "Maple Grove",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 45.0932846,
      "longitude": -93.42868,
      "phone": "(763) 493-9815",
      "specialHour": null,
      "state": "Minnesota",
      "storeName": "MN, Maple Grove",
      "storeNumber": 51,
      "zip": "55369",
    },
    Object {
      "address": "13857 Riverport Dr",
      "city": "St. Louis",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 38.7574348,
      "longitude": -90.4682159,
      "phone": "(314) 209-8015",
      "specialHour": null,
      "state": "Missouri",
      "storeName": "MO, St. Louis",
      "storeNumber": 20,
      "zip": "63043",
    },
    Object {
      "address": "1105 Walnut St #E101",
      "city": "Cary",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 35.7742157,
      "longitude": -78.76127,
      "phone": "(919) 535-6800",
      "specialHour": null,
      "state": "North Carolina",
      "storeName": "NC, Cary",
      "storeNumber": 73,
      "zip": "27511",
    },
    Object {
      "address": "8361 Concord Mills Blvd",
      "city": "Concord",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 35.37106,
      "longitude": -80.72417,
      "phone": "(704) 979-1700",
      "specialHour": null,
      "state": "North Carolina",
      "storeName": "NC, Concord",
      "storeNumber": 36,
      "zip": "28027",
    },
    Object {
      "address": "11049 Carolina Place Pkwy #LS-05",
      "city": "Pineville",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 35.0809441,
      "longitude": -80.8773,
      "phone": "(704) 969-1600",
      "specialHour": null,
      "state": "North Carolina",
      "storeName": "NC, Pineville",
      "storeNumber": 111,
      "zip": "28134",
    },
    Object {
      "address": "3320 Silas Creek Pkwy #300",
      "city": "Winston-Salem",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 36.07181,
      "longitude": -80.29934,
      "phone": "(336) 666-9400",
      "specialHour": null,
      "state": "North Carolina",
      "storeName": "NC, Winston-Salem",
      "storeNumber": 138,
      "zip": "27103",
    },
    Object {
      "address": "2502 S 133rd Plaza, Ste 111",
      "city": "Omaha",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 41.2363663,
      "longitude": -96.12297,
      "phone": "(402) 778-3915",
      "specialHour": null,
      "state": "Nebraska",
      "storeName": "NE, Omaha",
      "storeNumber": 47,
      "zip": "68144",
    },
    Object {
      "address": "310 Willowbrook Blvd",
      "city": "Wayne",
      "hours": Array [
        "Sun - Wed 11:00am - Midnight",
        "Thu 11:00am - 1:00am",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 40.8859444,
      "longitude": -74.2605057,
      "phone": "(973) 435-9244",
      "specialHour": null,
      "state": "New Jersey",
      "storeName": "NJ, Wayne",
      "storeNumber": 114,
      "zip": "07470",
    },
    Object {
      "address": "274 Woodbridge Center Dr",
      "city": "Woodbridge",
      "hours": Array [
        "Sun - Wed 11:00am - Midnight",
        "Thu 11:00am - 1:00am",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 40.55738,
      "longitude": -74.3005142,
      "phone": "(973) 435-9800",
      "specialHour": null,
      "state": "New Jersey",
      "storeName": "NJ, Woodbridge (Middlesex)",
      "storeNumber": 118,
      "zip": "07095",
    },
    Object {
      "address": "2100 Louisiana Blvd NE",
      "city": "Albuquerque",
      "hours": Array [
        "Sun - Tue 11:00am - Midnight",
        "Wed 11:00am - 1:00am",
        "Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:30am",
      ],
      "latitude": 35.10136,
      "longitude": -106.563835,
      "phone": "(505) 348-5157",
      "specialHour": null,
      "state": "New Mexico",
      "storeName": "NM, Albuquerque",
      "storeNumber": 79,
      "zip": "87110",
    },
    Object {
      "address": "2130 Park Centre Dr, Ste 100",
      "city": "Las Vegas",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 36.14862,
      "longitude": -115.332451,
      "phone": "(702) 984-4800",
      "specialHour": null,
      "state": "Nevada",
      "storeName": "NV, Las Vegas (SummerlinÂ®)",
      "storeNumber": 94,
      "zip": "89135",
    },
    Object {
      "address": "1 Crossgates Mall Rd",
      "city": "Albany",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 42.6899147,
      "longitude": -73.8521652,
      "phone": "(518) 313-4500",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, Albany",
      "storeNumber": 70,
      "zip": "12203",
    },
    Object {
      "address": "1 Galleria Dr",
      "city": "Buffalo",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 42.9145622,
      "longitude": -78.7637558,
      "phone": "(716) 932-2515",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, Buffalo (Walden Galleria)",
      "storeNumber": 86,
      "zip": "14225",
    },
    Object {
      "address": "1856 Veterans Memorial Hwy",
      "city": "Islandia",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 40.8032532,
      "longitude": -73.1785049,
      "phone": "(631) 582-6615",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, Islandia (Long Island)",
      "storeNumber": 32,
      "zip": "11749",
    },
    Object {
      "address": "1 Sunrise Mall Ste 2192",
      "city": "Massapequa",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 40.6819572,
      "longitude": -73.43417,
      "phone": "(516) 809-8511",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, Massapequa",
      "storeNumber": 123,
      "zip": "11758",
    },
    Object {
      "address": "234 W 42nd St, 3rd Floor",
      "city": "New York City",
      "hours": Array [
        "Mon - Thu 10:00am - 1:00am",
        "Fri - Sat 10:00am - 2:00am",
        "Sun 10:00am - Midnight",
      ],
      "latitude": 40.75658,
      "longitude": -73.98866,
      "phone": "(646) 495-2015",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, New York City (Times Square)",
      "storeNumber": 50,
      "zip": "10036",
    },
    Object {
      "address": "881 Pelham Pkwy",
      "city": "Pelham Manor",
      "hours": Array [
        "Mon - Sun 11:00am - Midnight",
      ],
      "latitude": 40.8937836,
      "longitude": -73.8216,
      "phone": "(914) 380-8500",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, Pelham Manor",
      "storeNumber": 82,
      "zip": "10803",
    },
    Object {
      "address": "15 Miracle Mile Dr",
      "city": "Rochester",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 43.0831871,
      "longitude": -77.63667,
      "phone": "(585) 417-4300",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, Rochester",
      "storeNumber": 93,
      "zip": "14623",
    },
    Object {
      "address": "2655 Richmond Ave",
      "city": "Staten Island",
      "hours": Array [
        "Sun - Wed 11:00am - Midnight",
        "Thu 11:00am - 1:00am",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 40.5811272,
      "longitude": -74.16549,
      "phone": "(929) 464-2700",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, Staten Island",
      "storeNumber": 130,
      "zip": "10314",
    },
    Object {
      "address": "3 Destiny USA Drive (Space J-307)",
      "city": "Syracuse",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 43.0684624,
      "longitude": -76.17098,
      "phone": "(315) 401-3700",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, Syracuse",
      "storeNumber": 71,
      "zip": "13204",
    },
    Object {
      "address": "4661 Palisades Center Dr",
      "city": "West Nyack",
      "hours": Array [
        "Sun - Wed 11:00am - Midnight",
        "Thu 11:00am - 1:00am",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 41.0972023,
      "longitude": -73.9544,
      "phone": "(845) 353-1555",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, West Nyack (Palisades)",
      "storeNumber": 15,
      "zip": "10994",
    },
    Object {
      "address": "1504 Old Country Rd",
      "city": "Westbury",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 40.74456,
      "longitude": -73.59371,
      "phone": "(516) 542-8501",
      "specialHour": null,
      "state": "New York",
      "storeName": "NY, Westbury",
      "storeNumber": 44,
      "zip": "11590",
    },
    Object {
      "address": "4110 Belden Village Street NW",
      "city": "Canton",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 40.8570137,
      "longitude": -81.42755,
      "phone": "(330)280-9530",
      "specialHour": null,
      "state": "Ohio",
      "storeName": "OH, Canton",
      "storeNumber": 146,
      "zip": "44718",
    },
    Object {
      "address": "1554 Polaris Pkwy, Ste 206",
      "city": "Columbus",
      "hours": Array [
        "Sun - Thu 11:30am - 11:00pm",
        "Fri - Sat 11:30am - 1:00am",
      ],
      "latitude": 40.14567,
      "longitude": -82.9812241,
      "phone": "(614) 310-6800",
      "specialHour": null,
      "state": "Ohio",
      "storeName": "OH, Columbus (Polaris)",
      "storeNumber": 58,
      "zip": "43240",
    },
    Object {
      "address": "3665 Park Mill Run Dr",
      "city": "Hilliard",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 40.0280571,
      "longitude": -83.12128,
      "phone": "(614) 771-1515",
      "specialHour": null,
      "state": "Ohio",
      "storeName": "OH, Hilliard (Columbus)",
      "storeNumber": 17,
      "zip": "43026",
    },
    Object {
      "address": "11775 Commons Dr",
      "city": "Springdale",
      "hours": Array [
        "Mon - Tue 11:00am - 11:00pm",
        "Wed - Thu 11:00am - Midnight",
        "Fri 11:00am - 1:00am",
        "Sat 10:00am - 1:00am",
        "Sun 10:00am - 11:00pm",
      ],
      "latitude": 39.29168,
      "longitude": -84.45724,
      "phone": "(513) 671-5501",
      "specialHour": null,
      "state": "Ohio",
      "storeName": "OH, Springdale (Cincinnati)",
      "storeNumber": 11,
      "zip": "45246",
    },
    Object {
      "address": "5001 Monroe St",
      "city": "Toledo",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 12:30am",
      ],
      "latitude": 41.69479,
      "longitude": -83.64057,
      "phone": "(419) 481-9800",
      "specialHour": null,
      "state": "Ohio",
      "storeName": "OH, Toledo",
      "storeNumber": 100,
      "zip": "43623",
    },
    Object {
      "address": "25735 1st St",
      "city": "Westlake",
      "hours": Array [
        "Sun - Thu 11:30am - 11:00pm",
        "Fri - Sat 11:30am - 1:00am",
      ],
      "latitude": 41.47331,
      "longitude": -81.90557,
      "phone": "(440) 892-1415",
      "specialHour": null,
      "state": "Ohio",
      "storeName": "OH, Westlake (Cleveland)",
      "storeNumber": 31,
      "zip": "44145",
    },
    Object {
      "address": "5501 North May Ave",
      "city": "Oklahoma City",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 35.52573,
      "longitude": -97.56725,
      "phone": "(405) 254-9900",
      "specialHour": null,
      "state": "Oklahoma",
      "storeName": "OK, Oklahoma City",
      "storeNumber": 66,
      "zip": "73112",
    },
    Object {
      "address": "6812 S 105th E Ave",
      "city": "Tulsa",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 36.0651474,
      "longitude": -95.8606,
      "phone": "(918) 449-3100",
      "specialHour": null,
      "state": "Oklahoma",
      "storeName": "OK, Tulsa",
      "storeNumber": 56,
      "zip": "74133",
    },
    Object {
      "address": "11860 SE 82nd Ave #4020",
      "city": "Happy Valley",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 45.4350433,
      "longitude": -122.57505,
      "phone": "(503) 305-9300",
      "specialHour": null,
      "state": "Oregon",
      "storeName": "OR, Happy Valley (Clackamas)",
      "storeNumber": 63,
      "zip": "97086",
    },
    Object {
      "address": "3503 Capital City Mall Dr",
      "city": "Camp Hill",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 40.2222557,
      "longitude": -76.9359055,
      "phone": "(717) 934-4400",
      "specialHour": null,
      "state": "Pennsylvania",
      "storeName": "PA, Camp Hill (Harrisburg)",
      "storeNumber": 132,
      "zip": "17011",
    },
    Object {
      "address": "180 E Waterfront Dr",
      "city": "Homestead",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 40.4093361,
      "longitude": -79.91419,
      "phone": "(412) 462-1500",
      "specialHour": null,
      "state": "Pennsylvania",
      "storeName": "PA, Homestead (Pittsburgh)",
      "storeNumber": 26,
      "zip": "15120",
    },
    Object {
      "address": "325 N Christopher Columbus Blvd",
      "city": "Philadelphia",
      "hours": Array [
        "Sun - Thu 11:30am - Midnight",
        "Fri - Sat 11:30am - 2:00am",
      ],
      "latitude": 39.9562149,
      "longitude": -75.13864,
      "phone": "(215) 413-1951",
      "specialHour": null,
      "state": "Pennsylvania",
      "storeName": "PA, Philadelphia",
      "storeNumber": 5,
      "zip": "19106",
    },
    Object {
      "address": "1995 Franklin Mills Cir",
      "city": "Philadelphia",
      "hours": Array [
        "Sun - Thu 11:30am - Midnight",
        "Fri - Sat 11:30am - 1:00am",
      ],
      "latitude": 40.0917,
      "longitude": -74.96094,
      "phone": "(215) 632-0333",
      "specialHour": null,
      "state": "Pennsylvania",
      "storeName": "PA, Philadelphia (Franklin Mills)",
      "storeNumber": 38,
      "zip": "19154",
    },
    Object {
      "address": "6260 Northway Dr",
      "city": "Pittsburgh",
      "hours": Array [
        "Mon - Sun 11:00am - Midnight",
      ],
      "latitude": 40.5495529,
      "longitude": -80.02219,
      "phone": "(412) 702-9550",
      "specialHour": null,
      "state": "Pennsylvania",
      "storeName": "PA, Pittsburgh (North Hills)",
      "storeNumber": 134,
      "zip": "15237",
    },
    Object {
      "address": "500 W Germantown Pike #2195",
      "city": "Plymouth Meeting",
      "hours": Array [
        "Sun - Thu 11:00am - 11:00pm",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 40.115406,
      "longitude": -75.2835541,
      "phone": "(610) 832-9200",
      "specialHour": null,
      "state": "Pennsylvania",
      "storeName": "PA, Plymouth Meeting",
      "storeNumber": 53,
      "zip": "19462",
    },
    Object {
      "address": " 725 W Main Ave",
      "city": "Bayamon",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 18.4065514,
      "longitude": -66.1631851,
      "phone": "(787) 545-7159",
      "specialHour": null,
      "state": "Puerto Rico",
      "storeName": "PR, Bayamon",
      "storeNumber": 113,
      "zip": "00961",
    },
    Object {
      "address": "40 Providence Pl",
      "city": "Providence",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 41.8272438,
      "longitude": -71.41671,
      "phone": "(401) 270-4555",
      "specialHour": null,
      "state": "Rhode Island",
      "storeName": "RI, Providence",
      "storeNumber": 23,
      "zip": "2903",
    },
    Object {
      "address": "100 Columbiana Circle #5",
      "city": "Columbia",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 34.0769539,
      "longitude": -81.15622,
      "phone": "(803) 576-4800",
      "specialHour": null,
      "state": "South Carolina",
      "storeName": "SC, Columbia",
      "storeNumber": 104,
      "zip": "29212",
    },
    Object {
      "address": "1025 Woodruff Rd",
      "city": "Greenville",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 34.83365,
      "longitude": -82.30396,
      "phone": "(864) 603-6500",
      "specialHour": null,
      "state": "South Carolina",
      "storeName": "SC, Greenville",
      "storeNumber": 72,
      "zip": "29607",
    },
    Object {
      "address": "1322 Celebrity Cir",
      "city": "Myrtle Beach",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 33.71837,
      "longitude": -78.88084,
      "phone": "(843) 945-3500",
      "specialHour": null,
      "state": "South Carolina",
      "storeName": "SC, Myrtle Beach",
      "storeNumber": 107,
      "zip": "29577",
    },
    Object {
      "address": "2751 Wolf Creek Pkwy",
      "city": "Memphis",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 35.2007332,
      "longitude": -89.79412,
      "phone": "(901) 252-4500",
      "specialHour": null,
      "state": "Tennessee",
      "storeName": "TN, Memphis",
      "storeNumber": 119,
      "zip": "38133",
    },
    Object {
      "address": "540 Opry Mills Dr",
      "city": "Nashville",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 36.2060051,
      "longitude": -86.69427,
      "phone": "(615) 970-3800",
      "specialHour": null,
      "state": "Tennessee",
      "storeName": "TN, Nashville",
      "storeNumber": 42,
      "zip": "37214",
    },
    Object {
      "address": "1554 Parkway",
      "city": "Sevierville",
      "hours": Array [
        "Mon - Sun 11:00am - Midnight",
      ],
      "latitude": 35.83574,
      "longitude": -83.57192,
      "phone": "(865) 868-3500",
      "specialHour": null,
      "state": "Tennessee",
      "storeName": "TN, Sevierville",
      "storeNumber": 137,
      "zip": "37862",
    },
    Object {
      "address": "425 Curtis Mathes Way",
      "city": "Arlington",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 32.68064,
      "longitude": -97.1045151,
      "phone": "(817) 525-2501",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, Arlington",
      "storeNumber": 54,
      "zip": "76018",
    },
    Object {
      "address": "9333 Research Blvd #A600",
      "city": "Austin",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 30.3834286,
      "longitude": -97.7374954,
      "phone": "(512) 346-8015",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, Austin",
      "storeNumber": 21,
      "zip": "78759",
    },
    Object {
      "address": "5488 S Padre Island Dr, Ste 1260",
      "city": "Corpus Christi",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 27.7115688,
      "longitude": -97.37009,
      "phone": "(361) 371-6740",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, Corpus Christi",
      "storeNumber": 133,
      "zip": "78411",
    },
    Object {
      "address": "9450 N Central Expy",
      "city": "Dallas",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 32.8772774,
      "longitude": -96.76921,
      "phone": "(214) 361-5553",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, Dallas",
      "storeNumber": 62,
      "zip": "75231",
    },
    Object {
      "address": "6101 Gateway Blvd West #2006",
      "city": "El Paso",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 31.7828579,
      "longitude": -106.409569,
      "phone": "(915) 304-5400",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, El Paso",
      "storeNumber": 92,
      "zip": "79925",
    },
    Object {
      "address": "2525 Rio Grande Blvd",
      "city": "Euless",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 32.87355,
      "longitude": -97.10334,
      "phone": "(817) 786-1600",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, Euless",
      "storeNumber": 81,
      "zip": "76039",
    },
    Object {
      "address": "704 Baybrook Mall Dr",
      "city": "Friendswood",
      "hours": Array [
        "Mon - Thu 11:00am - Midnight",
        "Fri 11:00am - 2:00am",
        "Sat 10:00am - 2:00am",
        "Sun 10:00am - Midnight",
      ],
      "latitude": 29.5426617,
      "longitude": -95.1533,
      "phone": "(281) 709-0600",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, Friendswood",
      "storeNumber": 89,
      "zip": "77546",
    },
    Object {
      "address": "2601 Preston Rd #1200",
      "city": "Frisco",
      "hours": Array [
        "Mon - Sun 11:00am - Midnight",
      ],
      "latitude": 33.0989227,
      "longitude": -96.81081,
      "phone": "(214) 387-0915",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, Frisco",
      "storeNumber": 29,
      "zip": "75034",
    },
    Object {
      "address": "6010 Richmond Ave",
      "city": "Houston",
      "hours": Array [
        "Mon - Thu 11:00am - Midnight",
        "Fri 11:00am - 2:00am",
        "Sat 10:00am - 2:00am",
        "Sun 10:00am - Midnight",
      ],
      "latitude": 29.7323875,
      "longitude": -95.48528,
      "phone": "(713) 952-2233",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, Houston (Galleria)",
      "storeNumber": 3,
      "zip": "77057",
    },
    Object {
      "address": "7620 Katy Fwy #100",
      "city": "Houston",
      "hours": Array [
        "Mon - Thu 11:00am - Midnight",
        "Fri 11:00am - 2:00am",
        "Sat 10:00am - 2:00am",
        "Sun 10:00am - Midnight",
      ],
      "latitude": 29.7859955,
      "longitude": -95.46493,
      "phone": "(713) 263-0303",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, Houston (Katy Fwy)",
      "storeNumber": 39,
      "zip": "77024",
    },
    Object {
      "address": "2700 Expressway 83",
      "city": "McAllen",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 26.1936016,
      "longitude": -98.25309,
      "phone": "(956) 217-5800",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, McAllen",
      "storeNumber": 109,
      "zip": "78501",
    },
    Object {
      "address": "440 Crossroads Blvd",
      "city": "San Antonio",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 29.4963322,
      "longitude": -98.5503159,
      "phone": "(210) 515-1515",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, San Antonio (Balcones Heights)",
      "storeNumber": 18,
      "zip": "78201",
    },
    Object {
      "address": "849 E Commerce St #740",
      "city": "San Antonio",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 29.4238014,
      "longitude": -98.4852753,
      "phone": "(210) 951-3600",
      "specialHour": null,
      "state": "Texas",
      "storeName": "TX, San Antonio (Rivercenter)",
      "storeNumber": 83,
      "zip": "78205",
    },
    Object {
      "address": "140 S Rio Grande St",
      "city": "Salt Lake City",
      "hours": Array [
        "Mon - Thu 11:00am - Midnight",
        "Fri 11:00am - 1:00am",
        "Sat 10:00am - 1:00am",
        "Sun 10:00am - Midnight",
      ],
      "latitude": 40.7662849,
      "longitude": -111.904205,
      "phone": "(385) 285-7320",
      "specialHour": null,
      "state": "Utah",
      "storeName": "UT, Salt Lake City",
      "storeNumber": 124,
      "zip": "84101",
    },
    Object {
      "address": "11958 U Fair Oaks Shopping Center",
      "city": "Fairfax",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 38.8646851,
      "longitude": -77.35745,
      "phone": "(703) 259-4050",
      "specialHour": null,
      "state": "Virginia",
      "storeName": "VA, Fairfax",
      "storeNumber": 129,
      "zip": "22033",
    },
    Object {
      "address": "4001 Brownstone Blvd",
      "city": "Glen Allen",
      "hours": Array [
        "Sun - Tue 11:00am - 11:00pm",
        "Wed - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 37.64869,
      "longitude": -77.6043549,
      "phone": "(804) 967-7399",
      "specialHour": null,
      "state": "Virginia",
      "storeName": "VA, Glen Allen (Richmond)",
      "storeNumber": 55,
      "zip": "23060",
    },
    Object {
      "address": "6655 Springfield Mall Rd",
      "city": "Springfield",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 38.77388,
      "longitude": -77.17556,
      "phone": "(703) 682-4300",
      "specialHour": null,
      "state": "Virginia",
      "storeName": "VA, Springfield",
      "storeNumber": 91,
      "zip": "22150",
    },
    Object {
      "address": "701 Lynnhaven Pkwy",
      "city": "Virginia Beach",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 36.81826,
      "longitude": -76.07084,
      "phone": "(757) 785-3500",
      "specialHour": null,
      "state": "Virginia",
      "storeName": "VA, Virginia Beach",
      "storeNumber": 69,
      "zip": "23452",
    },
    Object {
      "address": "1101 Outlet Collection Dr SW",
      "city": "Auburn",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 2:00am",
      ],
      "latitude": 47.2983322,
      "longitude": -122.243439,
      "phone": "(253) 258-3600",
      "specialHour": null,
      "state": "Washington",
      "storeName": "WA, Auburn (King)",
      "storeNumber": 115,
      "zip": "98001",
    },
    Object {
      "address": "414 West Towne Mall",
      "city": "Madison",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 43.05631,
      "longitude": -89.50933,
      "phone": "(608) 733-2050",
      "specialHour": null,
      "state": "Wisconsin",
      "storeName": "WI, Madison",
      "storeNumber": 121,
      "zip": "53719",
    },
    Object {
      "address": "2201 N Mayfair Rd",
      "city": "Wauwatosa",
      "hours": Array [
        "Sun - Thu 11:00am - Midnight",
        "Fri - Sat 11:00am - 1:00am",
      ],
      "latitude": 43.058,
      "longitude": -88.04879,
      "phone": "(414) 454-0100",
      "specialHour": null,
      "state": "Wisconsin",
      "storeName": "WI, Wauwatosa",
      "storeNumber": 59,
      "zip": "53226",
    },
  ],
}
`;
